dashboard order limit, coupon edit form updt

--- a/view/admin/coupon.ejs
+++ b/view/admin/coupon.ejs
@@ -34,6 +34,10 @@
               <td class="px-4 py-3 text-sm"><%= el.code %></td>
 
               <td class="px-4 py-3 text-xs">
+                <%= console.log(el.expireAfter) %> 
+                <%= console.log(new Date()) %> 
+                <%= console.log(el.expireAfter.getTime() < Date.now()) %> 
+                
                 <% if (el.expireAfter.getTime() < Date.now()) { %>
                 <span
                   class="px-2 py-1 font-semibold leading-tight text-green-700 bg-green-100 rounded-full dark:bg-green-700 dark:text-green-100"
