coupon is percent fixed in frontEnd

--- a/view/user/login.ejs
+++ b/view/user/login.ejs
@@ -61,8 +61,7 @@
                   class="form-control"
                   id="password"
                   name="password"
-                  value=""
-                  placeholder="Password"
+                  value="12345678"
                 />
                 <span id = "message" style="color:red"> </span>
               </div>
