coupon order update and coup updt

--- a/view/admin/dashboard.ejs
+++ b/view/admin/dashboard.ejs
@@ -33,7 +33,7 @@
             <p
               class="text-lg font-semibold text-gray-700 dark:text-gray-200"
             >
-              6389
+              <%= userCount %> 
             </p>
           </div>
         </div>
@@ -56,12 +56,12 @@
             <p
               class="mb-2 text-sm font-medium text-gray-600 dark:text-gray-400"
             >
-              Account balance
+              Sales This Month
             </p>
             <p
               class="text-lg font-semibold text-gray-700 dark:text-gray-200"
             >
-              $ 46,760.89
+            ₹ <%=  %> 
             </p>
           </div>
         </div>
