carts added to admin

--- a/view/admin/partials/footer.ejs
+++ b/view/admin/partials/footer.ejs
@@ -17,10 +17,28 @@
         return `<img src="/product_img/${element}" width="200px" style="display: inline;">`
       });
       document.getElementById('images').innerHTML=imagesArray.join('')
-      
-      
     }
+    
     </script>
+          <script
+          src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js"
+          defer
+        ></script>
+        <script src="/admin/assets/js/init-alpine.js"></script>
+        <script
+          src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"
+          defer
+        ></script>
+        <script src="/admin/assets/js/charts-lines.js" defer></script>
+        <script src="./assets/js/charts-bars.js" defer></script>
+        <script src="/admin/assets/js/charts-pie.js" defer></script>
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11" defer></script>
+      <!-- You need focus-trap.js to make the modal accessible -->
+      <script src="/admin/assets/js/focus-trap.js" defer></script>
+      <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+      
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 
   </body>
 </html>
