added cropper to banner

--- a/view/admin/add_banner.ejs
+++ b/view/admin/add_banner.ejs
@@ -7,34 +7,43 @@
       <h4 class="mb-4 text-lg font-semibold text-gray-600 dark:text-gray-300">Add Banner</h4>
       <form action="/admin/banner/add-banner" method="post" enctype="multipart/form-data">
         <div class="px-4 py-3 mb-8 bg-white rounded-lg shadow-md dark:bg-gray-800">
-          
-            <label class="block text-sm">
+          <label class="block text-sm">
             <span class="text-gray-700 dark:text-gray-400">Banner Name</span>
             <input
-              name="title" value=""
+              name="title"
+              value=""
               type="text"
-              class="block w-full mt-1 text-sm dark:border-gray-600 
-              dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
-            required/>
+              class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
+              required
+            />
           </label>
 
           <label class="block mt-4 text-sm">
             <span class="text-gray-700 dark:text-gray-400">Image</span>
             <input
               name="image"
+              id="input-image0"
               type="file"
               class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
-              required/>
+              required
+            />
           </label>
+          <div id="image0" class="image-container"></div>
+          <button style="display: none;" id="btnCrop0"
+          class="px-3 py-1 text-sm font-medium leading-5 text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-md active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple"
+        >
+          Crop
+        </button>
 
           <label class="block text-sm">
             <span class="text-gray-700 dark:text-gray-400">URL</span>
             <input
-              name="url" value=""
+              name="url"
+              value=""
               type="text"
-              class="block w-full mt-1 text-sm dark:border-gray-600 
-              dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
-            required/>
+              class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
+              required
+            />
           </label>
 
           <label class="block mt-4 text-sm">
@@ -42,10 +51,12 @@
             <textarea
               name="description"
               class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
-              required/></textarea>
+              required
+            ></textarea>
           </label>
 
-          <button type="submit"
+          <button
+            type="submit"
             class="px-5 py-3 mt-8 w-full font-medium w-64 leading-5 text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-lg active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple"
           >
             Add Banner
@@ -55,5 +66,48 @@
     </div>
   </div>
 </main>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+<script>
+  const input0 = $('#input-image0');
+  $('#input-image0').change(function () {
+    const img_data = input0[0].files[0];
+    const url = URL.createObjectURL(img_data);
+    $('#image0').html(`<img src="${url}" id="toCropImage0" style="width:100%;">`);
+    const image = $('#toCropImage0');
+
+    $('#image0').css('display', 'block');
+    $('#btnCrop0').css('display', 'block');
+
+    const cropper = new Cropper(image[0], {
+      aspectRatio: 2 / 1,
+      autoCropArea: 1,
+      viewMode: 1,
+      scalable: false,
+      zoomable: false,
+      movable: false,
+      minCropBoxWidth: 706,
+      minCropBoxHeight: 353,
+    });
+    $('#btnCrop0').click(function () {
+      cropper.getCroppedCanvas().toBlob((blob) => {
+        let fileInputElement = $('#input-image0');
+
+        let file = new File([blob], img_data.name, {
+          type: 'image/',
+          lastModified: new Date().getTime(),
+        });
+
+        let container = new DataTransfer();
+
+        container.items.add(file);
+
+        fileInputElement[0].files = container.files;
+
+        $('#image0').css('display', 'none');
+        $('#btnCrop0').css('display', 'none');
+      });
+    });
+  });
+</script>
 
 <%- include('partials/footer.ejs') %>
