--- a/view/admin/partials/footer.ejs
+++ b/view/admin/partials/footer.ejs
@@ -25,6 +25,7 @@
           defer
         ></script>
         <script src="/admin/assets/js/init-alpine.js"></script>
+        <script src="/admin/assets/js/cropper.js"></script>
         <script
           src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"
           defer
