--- a/view/admin/partials/header.ejs
+++ b/view/admin/partials/header.ejs
@@ -14,6 +14,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.css"
     />
+    <link rel="stylesheet" href="/admin/assets/css/cropper.min.css" type="text/css" />
 
   </head>
   <body>
