--- a/view/user/home.ejs
+++ b/view/user/home.ejs
@@ -1,5 +1,4 @@
-<%- include('partials/header.ejs') %> 
-
+<%- include('partials/header.ejs') %>
 
 <!-- banner part start-->
 <section class="banner_part">
@@ -7,7 +6,6 @@
     <div class="row align-items-center">
       <div class="col-lg-12">
         <div class="banner_slider owl-carousel">
-
           <% banner.forEach(el => { %>
 
           <div class="single_banner_slider">
@@ -15,10 +13,8 @@
               <div class="col-lg-5 col-md-8">
                 <div class="banner_text">
                   <div class="banner_text_iner">
-                    <h1><%= el.title  %></h1>
-                    <p>
-                        <%= el.description  %> 
-                    </p>
+                    <h1><%= el.title %></h1>
+                    <p><%= el.description %></p>
                     <a href="<%= el.url  %>" class="btn_2">buy now</a>
                   </div>
                 </div>
@@ -33,68 +29,6 @@
 
           <% }) %>
 
-          <!-- <div class="single_banner_slider">
-                            <div class="row">
-                                <div class="col-lg-5 col-md-8">
-                                    <div class="banner_text">
-                                        <div class="banner_text_iner">
-                                            <h1>Cloth & Wood
-                                                Sofa</h1>
-                                            <p>Incididunt ut labore et dolore magna aliqua quis ipsum
-                                                suspendisse ultrices gravida. Risus commodo viverra</p>
-                                            <a href="#" class="btn_2">buy now</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="banner_img d-none d-lg-block">
-                                    <a href="/product-details">
-                                        <img src="/user/img/banner-1.png" alt="">
-                                    </a>
-
-                                </div>
-                            </div>
-                        </div>
-                        <div class="single_banner_slider">
-                            <div class="row">
-                                <div class="col-lg-5 col-md-8">
-                                    <div class="banner_text">
-                                        <div class="banner_text_iner">
-                                            <h1>Wood & Cloth
-                                                Sofa</h1>
-                                            <p>Incididunt ut labore et dolore magna aliqua quis ipsum
-                                                suspendisse ultrices gravida. Risus commodo viverra</p>
-                                            <a href="#" class="btn_2">buy now</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="banner_img d-none d-lg-block">
-                                    <a href="/product-details">
-                                        <img src="/user/img/banner-1.png" alt="">
-                                    </a>
-
-                                </div>
-                            </div>
-                        </div> -->
-          <!-- <div class="single_banner_slider">
-                            <div class="row">
-                                <div class="col-lg-5 col-md-8">
-                                    <div class="banner_text">
-                                        <div class="banner_text_iner">
-                                            <h1>Cloth $ Wood Sofa</h1>
-                                            <p>Incididunt ut labore et dolore magna aliqua quis ipsum
-                                                suspendisse ultrices gravida. Risus commodo viverra</p>
-                                            <a href="#" class="btn_2">buy now</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="banner_img d-none d-lg-block">
-                                    <a href="/product-details">
-                                        <img src="/user/img/banner_img.png" alt="">
-                                    </a>
-
-                                </div>
-                            </div>
-                        </div> -->
         </div>
         <div class="slider-counter"></div>
       </div>
@@ -573,10 +507,8 @@
   </div>
 </section>
 <!--::subscribe_area part end::-->
-<%- include('partials/footer.ejs') %>
-<% if (msg.length>0) { %>
-  <script defer>
-    customAlert('<%= msg %>','success');
-   
-  </script>
-  <% } %>
+<%- include('partials/footer.ejs') %> <% if (msg.length>0) { %>
+<script defer>
+  customAlert('<%= msg %>', 'success');
+</script>
+<% } %>
